Added pose_stamped ground truth executable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,23 +1,26 @@
 cmake_minimum_required(VERSION 3.0.2)
 project(traj_eval)
 
-## Compile as C++11, supported in ROS Kinetic and newer
-# add_compile_options(-std=c++11)
-
 find_package(catkin REQUIRED COMPONENTS
   geometry_msgs
   roscpp
   sensor_msgs
   std_msgs
 )
-# find_package(Boost REQUIRED COMPONENTS system)
-# catkin_python_setup()
 
 include_directories(
+# include
   ${catkin_INCLUDE_DIRS}
 )
 
-add_executable(vm_eval src/pose_eval.cpp)
- target_link_libraries(vm_eval
+catkin_package()
+add_executable(vm_eval src/vins_mono_eval.cpp)
+target_link_libraries(vm_eval
    ${catkin_LIBRARIES}
- )
+)
+
+add_executable(pose_eval src/pose_stamped.cpp)
+target_link_libraries(pose_eval
+   ${catkin_LIBRARIES}
+)
+
