Added Kimera evaluation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,11 @@ target_link_libraries(okvis_eval
    ${catkin_LIBRARIES}
 )
 
+add_executable(kimera_eval src/okvis_eval.cpp)
+target_link_libraries(kimera_eval
+   ${catkin_LIBRARIES}
+)
+
 add_executable(msckf_eval src/msckf_eval.cpp)
 target_link_libraries(msckf_eval
    ${catkin_LIBRARIES}
